--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  background-color: rgb(255, 255, 255);
+  margin: auto;
+  border-radius: 10px;
+  border: 2px solid rgba(122, 122, 122, 0.2);
+  padding: 10px;
+  overflow: hidden;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  margin-top: 10px;
+  width: 90%;
+  padding: 5px;
+  height: 20px;
+  border-radius: 5px;
+  border: 0;
+  outline: none;
+  background-color: rgba(203, 203, 203, 0.2);
+}
+
+button {
+  margin: 10px;
+  outline: none;
+  border: 0;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 4px;
 }
